tests/frontend/fail/array/create_arg_atomic_array_mismatch.act
contract B

contract A

constructor
interface constructor(int x)


constructor
interface constructor()

creates
  A a := create A([[1,2,3],[4,5]])
